Add a parser for `module-info-patch.maven` files where `--add-exports` and similar options can be specified more easily.